# pocket-computer

./: Cargo.toml  README.md  build.rs
src/: display.rs  graphics.rs  input.rs  lib.rs  log.rs  power.rs  system.rs  touch.rs
src/apps/: app.rs  color.rs  home.rs  mod.rs  settings.rs  snake.rs  test.rs
